--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -70,12 +70,14 @@
 		<li>kaligrafia</li>
 		<li>malowidła ścienne</li>
 		<li>poezja</li>
-		<li>sztuka kulinarna</li>
 		<li>taniec</li>
 		<li>tatuaże</li>
-		<li>teatr muzyczny</li>
 		<li><del>filmy i seriale</del></li>
 		<li><del>K-pop</del></li>
+		<li><del>kulinaria</del></li>
+		<li><del>malarstwo</del></li>
+		<li><del>muzyka</del></li>
+		<li><del>teatr</del></li>
 	</ul>
 </details>
 
@@ -154,7 +156,7 @@
 				<th scope="row" rowspan="2">8</th>
 				<td rowspan="2">2 grudnia 2024</td>
 				<td class="schedule-exam">Kolokwium 2</td>
-				<td class="schedule-exam">K-pop, filmy</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/assk/testy/2">K-pop, filmy</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 7</td>
@@ -166,7 +168,7 @@
 				<th scope="row">9</th>
 				<td>9 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia 8</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/7">kulinaria</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -186,19 +188,19 @@
 				<th scope="row" rowspan="5">11</th>
 				<td rowspan="5">13 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 1</td>
-				<td class="schedule-presentation">Yuliya Davydzenka - Koreańska architektura na przykładzie tradycyjnego domu <i>hanok</i></td>
+				<td class="schedule-presentation">Yuliya Davydzenka – Koreańska architektura na przykładzie tradycyjnego domu <i>hanok</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation">Diana Grigoryan - Analiza koreańskiego społeczeństwa na podstawie filmu <i>Parasite</i></td>
+				<td class="schedule-presentation">Diana Grigoryan – Analiza koreańskiego społeczeństwa na podstawie filmu <i>Parasite</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
-				<td class="schedule-presentation">Miłosz Madoń - Społeczne problemy szkolnej młodzież na przykładzie filmów <i>Han Gong-ju</i> i <i>Sala Samobójców</i></td>
+				<td class="schedule-presentation">Miłosz Madoń – Społeczne problemy szkolnej młodzież na przykładzie filmów <i>Han Gong-ju</i> i <i>Sala Samobójców</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation">Joanna Latuszek - Tradycyjne koreańskie ceremonie ślubne</td>
+				<td class="schedule-presentation">Joanna Latuszek – Tradycyjne koreańskie ceremonie ślubne</td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -206,23 +208,23 @@
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">20 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation">Sofiia Martynenko - Symboliczne znaczenie ryżu i chleba w literaturze, sztuce oraz historii Korei i Ukrainy</td>
+				<td class="schedule-presentation">Sofiia Martynenko – Symboliczne znaczenie ryżu i chleba w literaturze, sztuce oraz historii Korei i Ukrainy</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 5</td>
-				<td class="schedule-presentation">Jagoda Tarańska - Tradycyjne i współczesne spojrzenie na onggi</td>
+				<td class="schedule-presentation">Jagoda Tarańska – Tradycyjne i współczesne spojrzenie na onggi</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 6</td>
-				<td class="schedule-presentation">Adam Mszański</td>
+				<td class="schedule-presentation">Adam Mszański – Problemy mniejszości seksualnych przedstawionych w koreańskich dramach</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 7</td>
-				<td class="schedule-presentation">Marta Gałązkiewicz - Problem młodych ludzi niebędących w stanie sprostać oczekiwaniom starszych pokoleń na przykładzie muzyki</td>
+				<td class="schedule-presentation">Marta Gałązkiewicz – Problem młodych ludzi niebędących w stanie sprostać oczekiwaniom starszych pokoleń na przykładzie muzyki</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 8</td>
-				<td class="schedule-presentation">Paulina Wałęga</td>
+				<td class="schedule-presentation">Paulina Wałęga – Wartość wolności: analiza motywu buntu w społeczeństwie koreańskim i polskim</td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -230,23 +232,19 @@
 				<th scope="row" rowspan="5">13</th>
 				<td rowspan="5">27 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 9</td>
-				<td class="schedule-presentation">Matylda Siodmok</td>
+				<td class="schedule-presentation">Matylda Siodmok – <em>Jestem kobietą</em>: portret kobiety i standardy piękna w Korei i Polsce</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 10</td>
-				<td class="schedule-presentation">Adam Świętojański - Wczesne rodzicielstwo na przykładzie literatury</td>
+				<td class="schedule-presentation">Adam Świętojański – Wczesne rodzicielstwo na przykładzie literatury</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 11</td>
-				<td class="schedule-presentation">Katarzyna Cepuch</td>
+				<td class="schedule-presentation">Paulina Tapa – Kultura wspólnego jedzenia w Korei Południowej na przykładzie fotografii</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 12</td>
-				<td class="schedule-presentation">Paulina Tapa - Kultura wspólnego jedzenia w Korei Południowej na przykładzie fotografii</td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 13</td>
-				<td class="schedule-presentation">Kiryl Navalotski</td>
+				<td class="schedule-presentation">Kiryl Navalotski – Porównanie literatury o ruchach demokratycznych na przykładzie dzieła Han Kang pt. „Human Acts”</td>
 			</tr>
 		</tbody>
 	</table>
