--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -142,26 +142,18 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 10</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25z/ljk4/zajecia/4">Arkusz 4</a></td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">11</th>
 				<td>13 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia 11</td>
-				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">12</th>
 				<td>20 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia 12</td>
-				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
-		</tbody>
 			<tr>
 				<th scope="row">13</th>
 				<td>27 stycznia 2025</td>
@@ -180,4 +172,3 @@
 </div>
 
 </body></html>
-
