--- a/uj/zajecia/24-25z/wats3-1/testy/2/index.html
+++ b/uj/zajecia/24-25z/wats3-1/testy/2/index.html
@@ -80,7 +80,7 @@
 <h3>Źródło:</h3>
 
 <ul>
-	<li><a href="https://n.news.naver.com/mnews/article/448/0000470887">https://n.news.naver.com/mnews/article/448/0000470887</a></li>
+	<li><a href="https://m.kwnews.co.kr/page/view/2024030617195212910">https://m.kwnews.co.kr/page/view/2024030617195212910</a></li>
 </ul>
 
 </body></html>
