--- a/uj/zajecia/24-25z/itas/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/itas/zajecia/1/index.html
@@ -16,9 +16,100 @@
 
 <h3>What comes to your mind when you hear the word <q>Asia</q>?</h3>
 
+<ul>
+	<li>Buddha</li>
+	<li>China</li>
+	<li>chopsticks</li>
+	<li>colonialism</li>
+	<li>competition</li>
+	<li>Confucianism</li>
+	<li>cosmetics</li>
+	<li>Cultural Revolution</li>
+	<li>economical differences between countries</li>
+	<li>education</li>
+	<li>Great Wall</li>
+	<li>hard work and long work</li>
+	<li>huge</li>
+	<li>ideological conflict</li>
+	<li>imperialism</li>
+	<li>Islam</li>
+	<li>K-pop, Chinese pop, J-pop</li>
+	<li>King Sejong the Great</li>
+	<li>long history</li>
+	<li>lovely food</li>
+	<li>Orient</li>
+	<li>poverty</li>
+	<li>ramen/ramyeon</li>
+	<li>rice</li>
+	<li>Russia</li>
+	<li>Samsung</li>
+	<li>shamanism</li>
+	<li>soju</li>
+	<li>Thailand</li>
+	<li>United States</li>
+	<li>wars/conflicts</li>
+</ul>
+
 <h3>What comes to your mind when you hear the word <q>Korea</q>?</h3>
 
+<ul>
+	<li>38th parallel</li>
+	<li>4B movement</li>
+	<li>ceramics</li>
+	<li>chaebol</li>
+	<li>compulsory military service</li>
+	<li>dokkaebi</li>
+	<li>e-sports</li>
+	<li>education system</li>
+	<li>Faker / 이상혁</li>
+	<li>familialism</li>
+	<li>fan</li>
+	<li>Gyeongbok Palace</li>
+	<li>Hallyu</li>
+	<li>Hanbok</li>
+	<li>Hangeul</li>
+	<li>hanok</li>
+	<li>Japanese occupation</li>
+	<li>Jeju Island</li>
+	<li>K-beauty standards</li>
+	<li>kimchi</li>
+	<li>labour/death camps</li>
+	<li>lowest birth rate</li>
+	<li>mountains / Mt. Baekdu</li>
+	<li>pansori</li>
+	<li>patriarchy</li>
+	<li>plastic surgery</li>
+	<li>school bulling</li>
+	<li>social injustice</li>
+	<li>Sollal, Chuseok (traditional holidays)</li>
+	<li>suicide</li>
+	<li>tiger</li>
+	<li>toxic diet culture</li>
+	<li>United States</li>
+	<li>zombies</li>
+</ul>
+
 <h3>What do you think about Korea's place in Asia?</h3>
+
+<ul>
+	<li>American military bases</li>
+	<li>communism vs capitalism</li>
+	<li>democracy vs totalitarism</li>
+	<li>Dokdo Islands / Liancourt Rocks</li>
+	<li>East Sea / Sea of Japan</li>
+	<li>high-tech</li>
+	<li>human trafficking</li>
+	<li>isolated country</li>
+	<li>Korean army</li>
+	<li>miracle on the Han River</li>
+	<li>one of the Asian tigers</li>
+	<li>respect from other countries</li>
+	<li>rich country</li>
+	<li>still at war</li>
+	<li>strong economy</li>
+	<li>tensions between Korea and Japan</li>
+	<li>well-developed country</li>
+</ul>
 
 <h2>1. What is <q>Asia</q>?</h2>
 
