--- a/videoplayer.html
+++ b/videoplayer.html
@@ -6,7 +6,7 @@
 			html { height:100% }
 			body { height:100%; margin:0 }
 			div { height:100%; overflow:hidden; resize:both; width:100% }
-			object { height:100%; width:100% }
+			object { height:100%; margin: .25em; width:100% }
 		</style>
 	</head>
 <body>
