--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -129,58 +129,55 @@
 				<th scope="row">15</th>
 				<td>15 kwietnia 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">16</th>
-				<td rowspan="2">25 kwietnia 2025</td>
-				<td class="schedule-exam">Sprawdzian</td>
-				<td class="schedule-exam">1~7과</td>
-				<td class="schedule-exam"></td>
-			</tr>
-			<tr>
+				<th scope="row">16</th>
+				<td>25 kwietnia 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/8">08. 지난번 여행보다 좋았어요</a></td>
-				<td class="schedule-presentation" rowspan="2"></td>
+				<td class="schedule-presentation" rowspan="2">대학수학능력시험 (egzamin dojrzałości)</td>
 			</tr>
 			<tr>
 				<th scope="row">17</th>
-				<td>16 maja 2025</td>
+				<td>9 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<th scope="row">18</th>
-				<td>23 maja 2025</td>
+				<td>16 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/9">09. 집에서 푹 쉬어야 돼요</a></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<th scope="row">19</th>
+				<td>23 maja 2025</td>
+				<td class="schedule-lecture">Lekcja</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<th scope="row">20</th>
 				<td>30 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">20</th>
+				<th scope="row">21</th>
 				<td>6 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">21</th>
+				<th scope="row">22</th>
 				<td>13 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">22</th>
+				<th scope="row">23</th>
 				<td>27 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
