--- a/viiilo/zajecia/25-26/jk1/index.html
+++ b/viiilo/zajecia/25-26/jk1/index.html
@@ -39,7 +39,7 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>2025년 10월 9일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">0과. 한글을 배워요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
