--- a/viiilo/index.html
+++ b/viiilo/index.html
@@ -31,4 +31,12 @@
 	<li><a href="viiilo/zajecia/24-25z/jk2">Język koreański - poziom zaawansowany</a></li>
 </ul>
 
+<h2>Przydatne strony</h2>
+
+<ul>
+	<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
+	<li><a href="https://dict.naver.com">네이버 사전</a></li>
+	<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
+</ul>
+
 </body></html>
