--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -18,16 +18,7 @@
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
 </address>
 
-	<summary class="h2">Przydatne strony</summary>
-
-	<ul>
-		<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
-		<li><a href="https://dict.naver.com">네이버 사전</a></li>
-		<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
-	</ul>
-</details>
-
-<h2>Plan zajęć w semestrze zimowym 2024/2025</h2>
+<h2>Plan zajęć w roku szkolnym 2024/2025</h2>
 
 <div class="class-schedule-container">
 	<table class="class-schedule">
@@ -35,6 +26,7 @@
 			<tr>
 				<th scope="col">Tydzień</th>
 				<th scope="col">Data</th>
+				<th scope="col">Rodzaj</th>
 				<th scope="col">Temat</th>
 			</tr>
 		</thead>
@@ -43,27 +35,31 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>17 października 2024</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/1">한글 - alfabet koreański (samogłoski)</a></td>
+				<td class="schedule-lecture">Lekcja 1</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/1">Język koreański (한국어)</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">2</th>
 				<td>31 października 2024</td>
-				<td class="schedule-lecture">한글 - alfabet koreański (spółgłoski)</td>
+				<td class="schedule-lecture">Lekcja 2</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/2">Alfabet (한글) – samogłoski</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">3</th>
 				<td>7 listopada 2024</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 3</td>
+				<td class="schedule-lecture">Alfabet (한글) – spółgłoski</td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">4</th>
 				<td>14 listopada 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -72,12 +68,14 @@
 				<th scope="row">5</th>
 				<td>21 listopada 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>28 listopada 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -86,12 +84,14 @@
 				<th scope="row">7</th>
 				<td>5 grudnia 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">8</th>
 				<td>12 grudnia 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -100,6 +100,7 @@
 				<th scope="row">9</th>
 				<td>19 grudnia 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -107,12 +108,14 @@
 				<th scope="row">10</th>
 				<td>9 stycznia 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">11</th>
 				<td>16 stycznia 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
