--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -18,16 +18,7 @@
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
 </address>
 
-	<summary class="h2">Przydatne strony</summary>
-
-	<ul>
-		<li><a href="https://stdict.korean.go.kr/main/main.do">국립국어원 표준국어대사전</a></li>
-		<li><a href="https://dict.naver.com">네이버 사전</a></li>
-		<li><a href="https://en.bab.la/dictionary/english-polish">bab.la English-Polish dictionary</a></li>
-	</ul>
-</details>
-
-<h2>Plan zajęć w semestrze zimowym 2024/2025</h2>
+<h2>Plan zajęć w roku szkolnym 2024/2025</h2>
 
 <div class="class-schedule-container">
 	<table class="class-schedule">
@@ -35,6 +26,7 @@
 			<tr>
 				<th scope="col">Tydzień</th>
 				<th scope="col">Data</th>
+				<th scope="col">Rodzaj</th>
 				<th scope="col">Temat</th>
 			</tr>
 		</thead>
@@ -43,30 +35,34 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>18 października 2024</td>
+				<td class="schedule-lecture">Lekcja 1</td>
 				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/1">powtórzenie materiału z poziomu podstawowego</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">2</th>
-				<td rowspan="2">22 października 2024</td>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">1과 음식, 2과 취미</a></td>
+				<th scope="row" rowspan="3">2</th>
+				<td rowspan="3">22 października 2024</td>
+				<td class="schedule-lecture" rowspan="3">Lekcja 2</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-1">부침개 요리법 (przepis na placki koreańskie)</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">부침개 요리법 (przepis na placki koreańskie)</a></td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-2">1과 음식</a></td>
 			</tr>
-		</tbody>
-		<tbody>
+			<tr>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2-3">2과 취미</a></td>
+			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>8 listopada 2024</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 3</td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">4</th>
 				<td>15 listopada 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -75,12 +71,14 @@
 				<th scope="row">5</th>
 				<td>22 listopada 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>29 listopada 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -89,12 +87,14 @@
 				<th scope="row">7</th>
 				<td>6 grudnia 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">8</th>
 				<td>13 grudnia 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
@@ -103,6 +103,7 @@
 				<th scope="row">9</th>
 				<td>20 grudnia 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -110,12 +111,14 @@
 				<th scope="row">10</th>
 				<td>10 stycznia 2024</td>
 				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">11</th>
 				<td>17 stycznia 2024</td>
+				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
