--- a/viiilo/zajecia/24-25z/jk1/zajecia/1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/1/index.html
@@ -13,7 +13,7 @@
 
 <h1>Język koreański - poziom podstawowy</h1>
 
-<h2>Język koreański - podstawowe informacje</h2>
+<h2>Język koreański (한국어) - podstawowe informacje</h2>
 
 <ul>
 	<li>język ojczysty dla 80 mln ludzi
@@ -61,37 +61,6 @@
 	<li><a href="viiilo/zajecia/24-25z/jk1/zajecia/1/img/연도별해외초중고등학교한국어반개설현황.jpg"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/연도별해외초중고등학교한국어반개설현황.jpg" alt="연도별해외초중고등학교한국어반개설현황"></a></li>
 	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/cCchIPz_pBs"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/cCchIPz_pBs.webp" alt="Dave [Korean regional dialect differences]
 "></a></li>
-</ul>
-
-<h2>한글 - alfabet koreański (samogłoski)</h2>
-
-<ul>
-	<li>ㅏ [a]</li>
-	<li>ㅑ [ja]</li>
-	<li>ㅓ [o] (mniej zaokrąglone usta od ㅜ)</li>
-	<li>ㅕ [jo]</li>
-	<li>ㅗ [o] (bardziej zaokrąglone usta od ㅓ)</li>
-	<li>ㅛ [jo]</li>
-	<li>ㅜ [u]</li>
-	<li>ㅠ [ju]</li>
-	<li>ㅡ [y]</li>
-	<li>ㅣ [i]</li>
-	<li>ㅐ [e]</li>
-	<li>ㅒ [je]</li>
-	<li>ㅔ [e]</li>
-	<li>ㅖ [je]</li>
-	<li>ㅘ [ła]</li>
-	<li>ㅙ [łe]</li>
-	<li>ㅚ [łe]</li>
-	<li>ㅝ [ło]</li>
-	<li>ㅞ [łe]</li>
-	<li>ㅟ [łi]</li>
-	<li>ㅢ [yi]</li>
-</ul>
-
-<ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/ODrPJzNuCXI"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/ODrPJzNuCXI.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 1]"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/luq8hUTViv0"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/luq8hUTViv0.webp" alt="My first Korean Alphabet) 똑똑 한국어 [입모양 입모양 mouth shape - Unit 2]"></a></li>
 </ul>
 
 </body></html>
