--- a/viiilo/zajecia/24-25z/jk2/zajecia/2-1/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/2-1/index.html
@@ -13,112 +13,29 @@
 
 <h1>Język koreański - poziom zaawansowany</h1>
 
-<h2>1. 1과 음식</h2>
+<h2>부침개 요리법 (przepis na placki koreańskie)</h2>
 
-<h3>Podręcznik</h3>
-
-<ul>
-	<li>
-		<div>strona 15, zadanie 1</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_S_1B_01_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 18, zadanie 1</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_S_1B_01_2.mp3"></audio>
-		</div>
-	</li>
-</ul>
-
-<h3>Ćwiczenia</h3>
+<h3>재료 (składniki)</h3>
 
 <ul>
-	<li>
-		<div>strona 9, zadanie 1</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_01_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 9, zadanie 2</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_01_2.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 9, zadanie 3</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_01_3.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 9, zadanie 4</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_01_4.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 9, zadanie 5</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_01_5.mp3"></audio>
-		</div>
-	</li>
+	<li>김치 (kimchi - dostępne w Carrefourze)</li>
+	<li>부침가루 (sproszkowany buchim - dostępny w My Korea)</li>
+	<li>쪽파 (zielona cebulka)</li>
+	<li>소시지 (parówki)</li>
 </ul>
 
-<h2>2. 2과 취미</h2>
+<h3>만드는 방법 (sposób przygotowania)</h3>
 
-<h3>Podręcznik</h3>
+<ol>
+	<li>김치와 부침가루 물의 비율을 같이해서 섞으면 반죽이 만들어지는데요.</li>
+	<li>그 반죽에 적당히 소금과 후추를 넣어서 간을 하고,</li>
+	<li>거기에 파를 작게 썰어서 넣어주고,</li>
+	<li>소시지도 좀 넣고 싶으면 넣은 뒤에</li>
+	<li>후라이팬에 기름 쳐서 얇게 부치면 됩니다.</li>
+</ol>
 
-<ul>
-	<li>
-		<div>strona 23, zadanie 1</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_S_1B_02_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 26, zadanie 1</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_S_1B_02_2.mp3"></audio>
-		</div>
-	</li>
-</ul>
-
-<h3>Ćwiczenia</h3>
-
-<ul>
-	<li>
-		<div>strona 15, zadanie 1</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_02_1.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 15, zadanie 2</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_02_2.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 15, zadanie 3</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_02_3.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 15, zadanie 4</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_02_4.mp3"></audio>
-		</div>
-	</li>
-	<li>
-		<div>strona 15, zadanie 5</div>
-		<div>
-			<audio controls src="viiilo/zajecia/24-25z/jk2/pliki/SJ_W_1B_02_5.mp3"></audio>
-		</div>
-	</li>
-</ul>
+<div class="youtube">
+	<object data="https://www.youtube-nocookie.com/embed/6TLlr6fNLaA" type="text/html"></object>
+</div>
 
 </body></html>
