--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -77,12 +77,12 @@
 
 	<ul class="sample-topics">
 		<li>folklor/szamanizm</li>
-		<li>militaria (Polska-Korea)</li>
 		<li>motoryzacja</li>
 		<li>niska dzietność</li>
 		<li>opieka psychologiczna/psychiatryczna</li>
 		<li>popkultura</li>
 		<li><del>bieżące sprawy</del></li>
+		<li><del>militaria (Polska-Korea)</del></li>
 	</ul>
 </details>
 
@@ -136,8 +136,8 @@
 				<th scope="row">3</th>
 				<td>18 października</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">militaria (Polska-Korea)</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/3">軍, 폴란드산 자폭 드론 구매 계약… 北 위협에 맞불</a></td>
 			</tr>
 		</tbody>
 		<tbody>
