--- a/uj/zajecia/24-25z/wats3-1/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/2/index.html
@@ -198,11 +198,41 @@
 <h3>번역</h3>
 
 <p>15. 아울러 영양사가 아예 배치되지 않은 지역도 있다는 문제도 있었다.</p>
+<ul>
+	<li>15. Ponadto, istnieje problem z brakiem dostępu do dietetyków w regionie.</li>
+	<li>15. Ponadto, pojawił się problem z regionami, do których nie został przydzielony żaden dietetyk.</li>
+	<li>15. Ponadto problemem jest, że nie do każdego obszaru zostali przydzieleni dietetycy.</li>
+</ul>
 <p>16. 전남 지역 소방서에는 영양사가 단 1명도 없었다.</p>
+<ul>
+	<li>16. W prowincji Jeolla Południowa na jednostkę straży pożarnej nie było nawet jednego dietetyka.</li>
+	<li>16. Do jednostki straży pożarnej w obszarze Jeonnam nie przydzielono ani jednego specjalisty.</li>
+	<li>16. W jednostkach straży pożarnej w regionie Jeonnam nie było ani jednego dietetyka.</li>
+</ul>
 <p>17. 전북·경북·제주 지역의 소방서에는 영양사가 1명에 불과했다.</p>
+<ul>
+	<li>17. Na jednostkę straży pożarnej w prowincjach Jeolla Północna, Gyeongsang Północny oraz na wyspie Jeju przypadał jeden dietetyk.</li>
+	<li>17. W jednostkach z Jeonbuk, Gyeongbuk oraz Jeju pracował tylko jeden dietetyk.</li>
+	<li>17. Do jednostek w Jeonbuk, Gyeongbuk i Jeju przydzielono tylko jednego dietetyka.</li>
+</ul>
 <p>18. 공개한 실제 소방관들의 급식 사진은 온라인상에서 논란이 되고 있다.</p>
+<ul>
+	<li>18. Opublikowane zdjęcia autentycznych posiłków strażaków spotkały się z dużymi kontrowersjami w sieci.</li>
+	<li>18. Kontrowersyjne stało się opublikowane online zdjęcie, przedstawiające rzeczywistą rację żywnościową strażaków.</li>
+	<li>18. Opublikowane w internecie zdjęcia prawdziwych posiłków strażaków spowodowały kontrowersje.</li>
+</ul>
 <p>19-1. 네티즌들은 법무부가 공개했던 교도소 급식, 방송에 공개됐던 구치소 급식 사진과 소방관 급식 사진을 비교하면서</p>
+<ul>
+	<li>19-1. Internauci porównali zdjęcia posiłków w więzieniu udostępnione przez Ministerstwo Sprawiedliwości, zdjęcia posiłków z Zakładu Karnego opublikowane w telewizji ze zdjęciami posiłków strażaków</li>
+	<li>19-1. Internauci porównali ze sobą to zdjęcie wraz z opublikowanymi przez Ministerstwo Sprawiedliwości zdjęciami posiłków więziennych oraz ukazanymi w telewizji posiłkami z aresztów śledczych.</li>
+	<li>19-1. Internauci porównywali zdjęcia posiłków więziennych opublikowanych przez Ministerstwo sprawiedliwości ze zdjęciami posiłków strażaków opublikowanych przez telewizje,</li>
+</ul>
 <p>19-2. “소방관들이 범죄자들보다 더 못 먹고 있다”, “저런 부실한 밥을 먹고 화재 진압하러 가는 거냐”는 등의 반응을 보였다.</p>
+<ul>
+	<li>19-2. Co wywołało reakcję w postaci komentarzy: „Strażacy jedzą gorzej niż przestępcy”, „Czy po zjedzeniu tak marnego posiłku jest się w stanie gasić pożary” itp.</li>
+	<li>19-2. Widoczne były tego typu reakcje: “Strażacy jadają gorzej od przestępców”, “Jedzą tak niskowartościowe posiłki i zamierzają ugasić pożar”.</li>
+	<li>19-2. pojawiły się reakcje „Strażacy jedzą gorzej niż kryminaliści”, „Jak będą gasić pożary po tak niewystarczających posiłkach”.</li>
+</ul>
 
 <hr class="homework">
 
