--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -85,13 +85,13 @@
 		<li>katastrofy przyrodnicze</li>
 		<li>kuchnia koreańska</li>
 		<li>moda (np. high fashion)</li>
-		<li>mowa potoczna</li>
 		<li>polityka</li>
 		<li>popkultura</li>
 		<li>problemy społeczne (np. starzenie się społeczeństwa)</li>
 		<li>relacje międzykoreańskie</li>
 		<li>społeczeństwo</li>
 		<li>wojskowość</li>
+		<li><del>mowa potoczna</del></li>
 		<li><del>sprawy kryminalne</del></li>
 	</ul>
 </details>
@@ -146,8 +146,8 @@
 				<th scope="row">3</th>
 				<td>18 października</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">mowa potoczna</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/3">세종대왕이 MZ세대를 만나고 놀란 이유</a></td>
 			</tr>
 		</tbody>
 		<tbody>
