--- a/uj/zajecia/24-25z/wats3-2/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/2/index.html
@@ -196,11 +196,69 @@
 <h3>번역</h3>
 
 <p>12-1. 당시 범행 3년이 지난 시점이어서</p>
+<ul>
+	<li>12-1. Przez to, że minęły 3 lata od zbrodni</li>
+	<li>12-1. W tamtym czasie od popełnienia przestępstwa minęły 3 lata, więc</li>
+	<li>12-1. Ponieważ od czasu przestępstwa minęły 3 lata</li>
+	<li>12-1. To przestępstwo wydarzyło się 3 lata temu</li>
+	<li>12-1. Wtedy minęły trzy lata od czasu, gdy popełniono przestępstwo,</li>
+	<li>12-1. Wówczas, 3 lata od popełnionej zbrodni nie udało się zabezpieczyć dowodów takich</li>
+	<li>12-1. Pomimo upływu trzech lat od dokonanej zbrodni</li>
+</ul>
 <p>12-2. 폐쇄회로(CC)TV 기록물과 통화내용 등 자료가 확보되지 않았고,</p>
+<ul>
+	<li>12-2. nie zdobyto żadnych materiałów, takich jak, zapisy rozmów telefonicznych i nagrań wideo z kamer przemysłowych oraz</li>
+	<li>12-2. nie została zdobyta dokumentacja, taka jak nagrania z kamery przemysłowej i zapisy rozmów telefonicznych,</li>
+	<li>12-2. nie udało się zdobyć nagrań wideo z kamer CCTV, zapisów rozmów telefonicznych itp.</li>
+	<li>12-2. Nagrania z kamery przemysłowej oraz zapisy rozmów telefonicznych, a także innych materiałów nie udało się zdobyć,</li>
+	<li>12-2. materiały z nagraniami z kamer przemysłowych, zapisy rozmów telefonicznych i inne nie zostały zdobyte oraz</li>
+	<li>12-2. jak nagrania z monitoringu czy zapisy rozmów telefonicznych.</li>
+	<li>12-2. nie udało się zabezpieczyć dowodów, w postaci nagrań z monitoringu lub zapisów rozmów telefonicznych.</li>
+</ul>
 <p>12-3. 시신이 발견되지 않아 A 씨는 경찰 수사망을 벗어났다.</p>
+<ul>
+	<li>12-3. nie odkryto ciała, dzięki czemu sprawca uniknął podejrzeń sieci śledczych policji.</li>
+	<li>12-3. ciało nie zostało znalezione, więc mężczyzna wydostał się z policyjnej obławy.</li>
+	<li>12-3. i ponieważ nie odnaleziono ciała, A wymknął się z sieci policyjnego dochodzenia (A uniknął policyjnego dochodzenia)</li>
+	<li>12-3. Ciała nie udało się znaleźć, mężczyzna wydostał się z policyjnego śledztwa.</li>
+	<li>12-3. zwłoki nie zostały odkryte więc mężczyzna wydostał się z policyjnej sieci dochodzeniowej. (opuścił policyjną sieć dochodzeniową?)</li>
+	<li>12-3. Ciało nie zostało odnalezione, więc sprawca uniknął śledztwa.</li>
+	<li>12-3. Ponieważ ciała nie odnaleziono, sprawca, Pan A, uniknął śledztwa.</li>
+	<li>12. Po 3 latach od dokonania zbrodni, ze względu na brak nagrań z kamer, zapisów rozmów telefonicznych, innych dowodów oraz nieodnalezienie ciała zaginionej partnerki, policyjne śledztwo (wobec mężczyzny) zostało umorzone.</li>
+</ul>
 <p>13. 참고인 조사 당시 A 씨는 "B 씨와 헤어졌다"고 경찰에 진술했다.</p>
+<ul>
+	<li>13. Jeden świadek zeznał policji podczas śledztwa, że morderca i ofiara rozstali się.</li>
+	<li>13. W czasie przesłuchania mężczyzny, oznajmił on policji „zerwałem ze swoją dziewczyną”.</li>
+	<li>13. Podczas przesłuchania świadków A oświadczył policji, że rozstał się z B</li>
+	<li>13. Po przesłuchaniu świadka mężczyzna zeznał policji „Rozstałem się ze swoją partnerką”.</li>
+	<li>13. Podczas śledztwa zeznający mężczyzna oświadczył policji, że „zerwał z partnerką”.</li>
+	<li>13. Wtedy świadek zeznał policji, że 50-letni mężczyzna (lub zabójca?) zerwał ze swoją partnerką.</li>
+	<li>13. Następnie w charakterze świadka, A powiedział policji, że rozstał się z B.</li>
+	<li>13. Sprawca, w charakterze świadka, powiedział policjantom, że rozstał się z ofiarą, Panią B.</li>
+</ul>
 <p>14-1. 경찰 조사 결과 A 씨는 1998년 부산의 한 나이트클럽에서 일하다가 B 씨와 교제를 시작했고,</p>
+<ul>
+	<li>14-1. Śledztwo policji wykazało, że sprawca wszedł z ofiarą w relację w 1998 r., pracując w jednym z klubów nocnych w Busanie.</li>
+	<li>14-1. Wynikiem policyjnego dochodzenia, w 1998 roku mężczyzna pracował w jednym z klubów nocnych w Busan i tam nawiązał relację z dziewczyną,</li>
+	<li>14-1. Z policyjnego śledztwa wynika, że A zaczął spotykać się z B w 1998 roku, kiedy pracował w jednym z klubów nocnych w Busanie</li>
+	<li>14-1. W wyniku badan policji mężczyzna w 1998 roku pracował w klubie nocnym w Busanie i tam poznał swoją partnerkę,</li>
+	<li>14-1. Wynik śledztwa policji wykazał, że w 1998 roku pracował w jednym klubie nocnym w Busanie i rozpoczął związek z partnerką oraz</li>
+	<li>14-1. W wyniku policyjnego śledztwa ustalono, że mężczyzna poznał się z ofiarą w 1998 roku, w jednym z pusańskich (busańskich) klubów nocnych, gdzie wówczas pracował.</li>
+	<li>14-1. Śledztwo wykazało, że w 1998 roku A pracował w busańskim klubie gdzie poznał B i wszedł z nią w związek.</li>
+	<li>14-1. Według śledztwa prowadzonego przez policję, w 1998 roku Pan A pracował w klubie w Busan, gdzie poznał ofiarę. Para weszła w związek.</li>
+</ul>
 <p>14-2. B 씨가 숨지기 전까지 5년가량 동거하다가 이 같은 범행을 저질렀다.</p>
+<ul>
+	<li>14-2. Ponadto ofiara mieszkała z nim przez ok. 5 lat aż do momentu popełnionego przestępstwa.</li>
+	<li>14-2. z którą mieszkał przez około 5 lat do momentu popełnienia przestępstwa i jej śmierci.</li>
+	<li>14-2. Aż do momentu śmierci B, mieszkał z nią przez 5 lat aż dopuścił się tego przestępstwa</li>
+	<li>14-2. Przed tym jak mężczyzna popełnił zbrodnie oni mieszkali razem przez około 5 lat</li>
+	<li>14-2. zanim popełnił przestępstwo i partnerka zginęła to mieszkali razem przez około 5 lat.</li>
+	<li>14-2. Mieszkali oni razem ze sobą około 5 lat, przed dokonaniem tej zbrodni.</li>
+	<li>14-2. Zanim doszło do zbrodni, para mieszkała ze sobą 5 lat.</li>
+	<li>14-2. Przed popełnieniem zbrodni i śmiercią Pani B, mieszkała razem ze swoim sprawcą przez 5 lat.</li>
+</ul>
 
 <hr class="homework">
 
