--- a/viiilo/index.html
+++ b/viiilo/index.html
@@ -24,11 +24,11 @@
 
 <h2>Zajęcia</h2>
 
-<h3>Semestr zimowy 2024/2025</h3>
+<h3>rok szkolny 2024/2025</h3>
 
 <ul>
 	<li><a href="viiilo/zajecia/24-25z/jk1">Język koreański - poziom podstawowy</a></li>
-	<li>Język koreański - poziom zaawansowany</li>
+	<li><a href="viiilo/zajecia/24-25z/jk2">Język koreański - poziom zaawansowany</a></li>
 </ul>
 
 </body></html>
