--- a/viiilo/zajecia/24-25z/jk1/zajecia/1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/1/index.html
@@ -59,7 +59,7 @@
 	<li><a href="viiilo/zajecia/24-25z/jk1/zajecia/1/img/한류의시기별특징.jpg"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/한류의시기별특징.jpg" alt="한류의시기별특징"></a></li>
 	<li><a href="viiilo/zajecia/24-25z/jk1/zajecia/1/img/유튜브한국가수동영상조회수.webp"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/유튜브한국가수동영상조회수.webp" alt="유튜브한국가수동영상조회수"></a></li>
 	<li><a href="viiilo/zajecia/24-25z/jk1/zajecia/1/img/연도별해외초중고등학교한국어반개설현황.jpg"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/연도별해외초중고등학교한국어반개설현황.jpg" alt="연도별해외초중고등학교한국어반개설현황"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/cCchIPz_pBs"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/cCchIPz_pBs.webp" alt="Dave [Korean regional dialect differences]
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/cCchIPz_pBs"><img src="viiilo/zajecia/24-25z/jk1/zajecia/1/img/cCchIPz_pBs.webp" alt="Dave [Korean regional dialect differences]
 "></a></li>
 </ul>
 
