--- a/uj/zajecia/24-25z/itas/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/itas/zajecia/3/index.html
@@ -1,47 +1,27 @@
-<!DOCTYPE html><html lang="pl"><head><meta charset="utf-8">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
 	<base href="https://twilczynski.com/">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 	<meta name="robots" content="none">
 	<link rel="icon" href="data:,">
-	<link rel="stylesheet" href="css/all.css">
-	<link rel="stylesheet" media="print" href="css/print.css">
+	<link rel="stylesheet" href="uj/css/all.css">
+	<link rel="stylesheet" media="print" href="uj/css/print.css">
 
-	<title>Korean Language</title>
+	<title>Introduction to Asian Studies</title>
 	<meta name="author" content="Tomasz Wilczyński">
 </head><body class="home">
 
-<h1>Korean Language</h1>
+<h1>Introduction to Asian Studies: Overview of Research Methods<br><br>Korean Language</h1>
 
 <h2>0. Questionnaire</h2>
 
 <h3>What comes to your mind when you think of Korean language?</h3>
 
-<ul>
-	<li>Hangeul</li>
-	<li>banmal (반말) / jondaenmal (존댓말)</li>
-	<li>hierarchy</li>
-	<li>Konglish</li>
-	<li>King Sejong the Great</li>
-	<li>dialects</li>
-</ul>
-
 <h3>What are the reasons for learning Korean language?</h3>
-
-<ul>
-	<li>kpop</li>
-	<li>Hallyu (Korean Wave)</li>
-	<li>dramas</li>
-	<li>movies</li>
-	<li>job opportunities</li>
-	<li>to know the culture better (easier to find information which hasn't been translated)</li>
-	<li>geopolitics (government, diplomacy)</li>
-	<li>to connect with roots and speak with family members</li>
-</ul>
 
 <h3>Is knowing the language required to understand and enjoy Korean culture?</h3>
 
 <ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/2gRFM0N1U8c"><img src="itas/zajęcia/3/img/2gRFM0N1U8c.webp" alt="타지키스탄에서 만난 고려인은 한국인과 말이 통할까?ㅣ세계테마기행ㅣ#골라듄다큐"></a></li>
+	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/2gRFM0N1U8c"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/2gRFM0N1U8c.webp" alt="타지키스탄에서 만난 고려인은 한국인과 말이 통할까?ㅣ세계테마기행ㅣ#골라듄다큐"></a></li>
 </ul>
 
 <h2>1. What is Korean language?</h2>
@@ -78,18 +58,21 @@
 </ul>
 
 <ul class="gallery">
-	<li><a href="itas/zajęcia/3/img/map_of_Korean_language.png"><img src="itas/zajęcia/3/img/map_of_Korean_language.png" alt="map of korean language"></a></li>
-	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/eq-1niuXZmQ"><img src="itas/zajęcia/3/img/eq-1niuXZmQ.webp" alt="김정은, 울먹이며 감성 연설…사랑하는 남녘 동포 / SBS"></a></li>
-	<li><a href="itas/zajęcia/3/img/yanbian-ethnic-composition.webp"><img src="itas/zajęcia/3/img/yanbian-ethnic-composition.webp" alt="Yanbian ethnic composition"></a></li>
-	<li><a href="itas/zajęcia/3/img/yanbian_map.webp"><img src="itas/zajęcia/3/img/yanbian_map.webp" alt="Yanbian map"></a></li>
-	<li><a href="itas/zajęcia/3/img/koryo-saram.jpg"><img src="itas/zajęcia/3/img/koryo-saram.jpg" alt="Koryo-saram"></a></li>
-	<li><a href="itas/zajęcia/3/img/vitaliy_kim.jpg"><img src="itas/zajęcia/3/img/vitaliy_kim.jpg" alt="Vitalii Kim"></a></li>
-	<li><a href="itas/zajęcia/3/img/sung-kim.jpg"><img src="itas/zajęcia/3/img/sung-kim.jpg" alt="Sung Kim"></a></li>
-	<li><a href="itas/zajęcia/3/img/재일교포.jpg"><img src="itas/zajęcia/3/img/재일교포.jpg" alt="재일교포"></a></li>
-	<li><a href="itas/zajęcia/3/img/한류의시기별특징.jpg"><img src="itas/zajęcia/3/img/한류의시기별특징.jpg" alt="한류의 시기별 특징.jpg"></a></li>
-	<li><a href="itas/zajęcia/3/img/bts-fans.webp"><img src="itas/zajęcia/3/img/bts-fans.webp" alt="BTS fans"></a></li>
-	<li><a href="itas/zajęcia/3/img/유튜브한국가수동영상조회수.webp"><img src="itas/zajęcia/3/img/유튜브한국가수동영상조회수.webp" alt="유튜브한국가수동영상조회수"></a></li>
-	<li><a href="itas/zajęcia/3/img/연도별해외초중고등학교한국어반개설현황.jpg"><img src="itas/zajęcia/3/img/연도별해외초중고등학교한국어반개설현황.jpg" alt="연도별해외초중고등학교한국어반개설현황"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/세종대왕1.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/세종대왕1.jpg" alt="세종대왕1"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/세종대왕2.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/세종대왕2.jpg" alt="세종대왕2"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/map_of_Korean_language.png"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/map_of_Korean_language.png" alt="map of korean language"></a></li>
+	<!-- <li><a class="youtube-thumbnail" href="https://youtube.com/embed/eq-1niuXZmQ"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/eq-1niuXZmQ.webp" alt="김정은, 울먹이며 감성 연설…사랑하는 남녘 동포 / SBS"></a></li> -->
+	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/vpxEG1bFPmc"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/vpxEG1bFPmc.webp" alt="김정은 보건위기 극복돼 북남 손 맞잡길…열병식 연설 / SBS"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/yanbian_map.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/yanbian_map.webp" alt="Yanbian map"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/yanbian-ethnic-composition.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/yanbian-ethnic-composition.webp" alt="Yanbian ethnic composition"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/koryo-saram.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/koryo-saram.jpg" alt="Koryo-saram"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/vitaliy_kim.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/vitaliy_kim.jpg" alt="Vitalii Kim"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/sung-kim.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/sung-kim.jpg" alt="Sung Kim"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/재일교포.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/재일교포.jpg" alt="재일교포"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/한류의시기별특징.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/한류의시기별특징.jpg" alt="한류의 시기별 특징.jpg"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/bts-fans.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/bts-fans.webp" alt="BTS fans"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/유튜브한국가수동영상조회수.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/유튜브한국가수동영상조회수.webp" alt="유튜브한국가수동영상조회수"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/연도별해외초중고등학교한국어반개설현황.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/연도별해외초중고등학교한국어반개설현황.jpg" alt="연도별해외초중고등학교한국어반개설현황"></a></li>
 </ul>
 
 <h2>2. History of Korean language</h2>
@@ -108,7 +91,7 @@
 			<li>few surviving representations
 				<ul>
 					<li>vernacular poems (<em>hyangga</em>, 향가)</li>
-					<li>inscriptions</li>
+					<li>stone inscriptions</li>
 					<li>wooden slips (<em>mokgan</em>, 목간)</li>
 					<li>Buddhist works</li>
 				</ul>
@@ -120,7 +103,7 @@
 			<li>Goryeo period (936 - 1392)</li>
 			<li>Joseon period (1392 - 16th century)</li>
 			<li>divided into Early and Late periods</li>
-			<li>introcution of the Korean alphabet (1446)</li>
+			<li>introduction of the Korean alphabet (1446)</li>
 			<li>written in Chinese characters in the Early period</li>
 			<li>started using the Korean alphabet in the Late period</li>
 			<li>introduction of new vocabulary during the Mongol invasions (13th century)</li>
@@ -147,41 +130,44 @@
 </ul>
 
 <ul class="gallery">
-	<li><a href="itas/zajęcia/3/img/원삼국시대.webp"><img src="itas/zajęcia/3/img/원삼국시대.webp" alt="원삼국시대"></a></li>
-	<li><a href="itas/zajęcia/3/img/삼국시대.webp"><img src="itas/zajęcia/3/img/삼국시대.webp" alt="삼국시대"></a></li>
-	<li><a href="itas/zajęcia/3/img/통일신라.webp"><img src="itas/zajęcia/3/img/통일신라.webp" alt="통일신라"></a></li>
-	<li><a href="itas/zajęcia/3/img/삼국유사.webp"><img src="itas/zajęcia/3/img/삼국유사.webp" alt="삼국유사"></a></li>
-	<li><a href="itas/zajęcia/3/img/향가.jpg"><img src="itas/zajęcia/3/img/향가.jpg" alt="향가"></a></li>
-	<li><a href="itas/zajęcia/3/img/임신서기석.webp"><img src="itas/zajęcia/3/img/임신서기석.webp" alt="임신서기석"></a></li>
-	<li><a href="itas/zajęcia/3/img/mokgan.jpg"><img src="itas/zajęcia/3/img/mokgan.jpg" alt="mokgan"></a></li>
-	<li><a href="itas/zajęcia/3/img/buddhist-works.jpg"><img src="itas/zajęcia/3/img/buddhist-works.jpg" alt="Buddhist works"></a></li>
-	<li><a href="itas/zajęcia/3/img/goryeo.jpg"><img src="itas/zajęcia/3/img/goryeo.jpg" alt="Goryeo"></a></li>
-	<li><a href="itas/zajęcia/3/img/joseon.png"><img src="itas/zajęcia/3/img/joseon.png" alt="Joseon"></a></li>
-	<li><a href="itas/zajęcia/3/img/empire-of-japan.jpg"><img src="itas/zajęcia/3/img/empire-of-japan.jpg" alt="Empire of Japan"></a></li>
-	<li><a href="itas/zajęcia/3/img/일본어교실.jpg"><img src="itas/zajęcia/3/img/일본어교실.jpg" alt="일본어교실"></a></li>
-	<li><a href="itas/zajęcia/3/img/조선어말살정책.webp"><img src="itas/zajęcia/3/img/조선어말살정책.webp" alt="조선어말살정책"></a></li>
-	<li><a href="itas/zajęcia/3/img/조선어학회.jpg"><img src="itas/zajęcia/3/img/조선어학회.jpg" alt="조선어학회"></a></li>
-	<li><a href="itas/zajęcia/3/img/노동신문.jpg"><img src="itas/zajęcia/3/img/노동신문.jpg" alt="노동신문"></a></li>
-	<li><a href="itas/zajęcia/3/img/1970신문.jpg"><img src="itas/zajęcia/3/img/1970신문.jpg" alt="1970 신문"></a></li>
-	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/uGDDyMWHJtg"><img src="itas/zajęcia/3/img/uGDDyMWHJtg.webp" alt="과거로 가도 말이 통할까? – 한국어의 변화"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/원삼국시대.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/원삼국시대.webp" alt="원삼국시대"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/삼국시대.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/삼국시대.webp" alt="삼국시대"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/통일신라.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/통일신라.webp" alt="통일신라"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/향가.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/향가.jpg" alt="향가"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/임신서기석.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/임신서기석.webp" alt="임신서기석"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/mokgan.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/mokgan.jpg" alt="mokgan"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/buddhist-works.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/buddhist-works.jpg" alt="Buddhist works"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/goryeo.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/goryeo.jpg" alt="Goryeo"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/삼국유사.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/삼국유사.webp" alt="삼국유사"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/joseon.png"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/joseon.png" alt="Joseon"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/empire-of-japan.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/empire-of-japan.jpg" alt="Empire of Japan"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/일본어교실.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/일본어교실.jpg" alt="일본어교실"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/조선어말살정책.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/조선어말살정책.webp" alt="조선어말살정책"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/조선어학회.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/조선어학회.jpg" alt="조선어학회"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/노동신문.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/노동신문.jpg" alt="노동신문"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/1970신문.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/1970신문.jpg" alt="1970 신문"></a></li>
+	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/uGDDyMWHJtg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/uGDDyMWHJtg.webp" alt="과거로 가도 말이 통할까? – 한국어의 변화"></a></li>
 </ul>
 
 <h2>3. Korean alphabet</h2>
 
 <ul class="gallery">
-	<li><a href="itas/zajęcia/3/img/훈민정음표지.webp"><img src="itas/zajęcia/3/img/훈민정음표지.webp" alt="훈민정음 표지"></a></li>
-	<li><a href="itas/zajęcia/3/img/훈민정음.png"><img src="itas/zajęcia/3/img/훈민정음.png" alt="훈민정음"></a></li>
-	<li><a href="itas/zajęcia/3/img/훈민정음자모.jpg"><img src="itas/zajęcia/3/img/훈민정음자모.jpg" alt="훈민정음 자모"></a></li>
-	<li><a href="itas/zajęcia/3/img/기본자모.gif"><img src="itas/zajęcia/3/img/기본자모.gif" alt="기본자모"></a></li>
-	<li><a href="itas/zajęcia/3/img/복합자모.gif"><img src="itas/zajęcia/3/img/복합자모.gif" alt="복합자모"></a></li>
-	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/1qI1ge5PKnY"><img src="itas/zajęcia/3/img/1qI1ge5PKnY.webp" alt="[핫클립] 한글에 과학이 담겨 있다? 한글 속 과학 원리 / YTN 사이언스"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/훈민정음표지.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/훈민정음표지.webp" alt="훈민정음 표지"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/훈민정음.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/훈민정음.jpg" alt="훈민정음"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/훈민정음자모.jpg"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/훈민정음자모.jpg" alt="훈민정음 자모"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/천지인1.png"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/천지인1.png" alt="천지인1"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/천지인2.webp"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/천지인2.webp" alt="천지인2"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/기본자모.gif"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/기본자모.gif" alt="기본자모"></a></li>
+	<li><a href="uj/zajecia/24-25z/itas/zajecia/3/img/복합자모.gif"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/복합자모.gif" alt="복합자모"></a></li>
+	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/1qI1ge5PKnY"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/1qI1ge5PKnY.webp" alt="[핫클립] 한글에 과학이 담겨 있다? 한글 속 과학 원리 / YTN 사이언스"></a></li>
 </ul>
 
 <h2>4. Dialects in Korean language</h2>
 
 <ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/MHaeLxCH55U"><img src="itas/zajęcia/3/img/MHaeLxCH55U.webp" alt="Are you hiding your Korean dialect? | Street Interview"></a></li>
-	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/SlmEUMt7tv4"><img src="itas/zajęcia/3/img/SlmEUMt7tv4.webp" alt="[페이스北] 같은 듯 다른 듯…남북 언어 차이 / KBS뉴스(News)"></a></li>
+	<!-- <li><a class="youtube-thumbnail" href="https://youtube.com/embed/MHaeLxCH55U"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/MHaeLxCH55U.webp" alt="Are you hiding your Korean dialect? | Street Interview"></a></li> -->
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/cCchIPz_pBs"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/cCchIPz_pBs.webp" alt="Dave [Korean regional dialect differences]"></a></li>
+	<li><a class="youtube-thumbnail" href="https://youtube.com/embed/SlmEUMt7tv4"><img src="uj/zajecia/24-25z/itas/zajecia/3/img/SlmEUMt7tv4.webp" alt="[페이스北] 같은 듯 다른 듯…남북 언어 차이 / KBS뉴스(News)"></a></li>
 </ul>
 
 </body></html>
